# learn-llvm-17

./: README.md
Learn-LLVM-17/: .gitignore
Learn-LLVM-17/Chapter02/calc/: CMakeLists.txt  build.sh  compile_commands.json  expr  read.md
Learn-LLVM-17/Chapter02/calc/src/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/: CMakeLists.txt  build.sh  compile_commands.json  read.md  tinylang
Learn-LLVM-17/Chapter03/tinylang/cmake/modules/: AddTinylang.cmake
Learn-LLVM-17/Chapter03/tinylang/lib/Basic/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/lib/Lexer/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/lib/Parser/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/lib/Sema/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/tools/: CMakeLists.txt
Learn-LLVM-17/Chapter03/tinylang/tools/driver/: CMakeLists.txt
Learn-LLVM-17/Chapter04/tinylang/: build.sh  gcd.c  gcd.ll  read.md
Learn-LLVM-17/Chapter04/tinylang/examples/: Gcd  Gcd.ll  Gcd.s
Learn-LLVM-17/Chapter05/tinylang/: build.sh  read.md
Learn-LLVM-17/Chapter05/tinylang/examples/: Point.ll  Point.s
Learn-LLVM-17/Chapter06/calc/: build.sh  expr  read.md  tmp
Learn-LLVM-17/Chapter06/tinylang/: read.md
Learn-LLVM-17/Chapter06/tinylang/examples/: Person.ll
Learn-LLVM-17/Chapter07/ppprofiler/: CMakeLists.txt  a.out  ppprofile.csv  read.md
Learn-LLVM-17/Chapter07/ppprofiler/example/: hello.c  hello.ll  hello_inst.bc
Learn-LLVM-17/Chapter07/tinylang/: build.sh  read.md
Learn-LLVM-17/Chapter07/tinylang/examples/: Gcd.ll  Gcd.s
Learn-LLVM-17/Chapter07/tinylang2/: read.md
Learn-LLVM-17/Chapter08/TableGen/: CMakeLists.txt  TokenFilter.inc  build.sh  read.md  tinylang-tblgen
Learn-LLVM-17/Chapter09/jit/: JIT  build.sh  main.ll  read.md
Learn-LLVM-17/Chapter09/lljit/: CMakeLists.txt  build.sh  calc  read.md
Learn-LLVM-17/Chapter10/clang-plugin/: naming  read.md
Learn-LLVM-17/Chapter10/clang-plugin2/: build.sh  read.md
Learn-LLVM-17/Chapter10/iconvchecker/: CMakeLists.txt  read.md
Learn-LLVM-17/Chapter10/sanitizers/: read.md
Learn-LLVM-17/Chapter10/staticanalyzer/: read.md
Learn-LLVM-17/Chapter10/xray/: read.md  xray-log.xraydemo.GWYJgE  xraydemo
Learn-LLVM-17/Chapter11/: read.md
calc/: CMakeLists.txt  build.sh  rtcalc.c
calc/src/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h
tinylang/: CMakeLists.txt  build.sh
tinylang/.cache/clangd/index/: Diagnostic.cpp.5A8564BB307A980C.idx  Diagnostic.def.EABE24022FF1EEF5.idx  Diagnostic.h.591DDBE121CEF70A.idx  LLVM.h.62A65B9FC88E1139.idx  Lexer.cpp.FA8F517A9EFCEF96.idx  TokenKinds.cpp.763FD26D867F640E.idx  TokenKinds.def.C9FD76C8EB79C89F.idx  TokenKinds.h.83B13C1B61AC12DC.idx  Version.cpp.D24D4CE8A59AD39E.idx  Version.h.752835877BF5F988.idx
tinylang/cmake/modules/: AddTinylang.cmake
tinylang/include/tinylang/Basic/: Diagnostic.h  LLVM.h  TokenKinds.h  Version.h
tinylang/include/tinylang/Lexer/: Lexer.h  Token.h
tinylang/lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp  Version.cpp
tinylang/lib/Lexer/: CMakeLists.txt  Lexer.cpp
勘误/: 勘误.md
编译/: 笔记.md
